Add primavera.html and fix index.html boilerplate
Boilerplate was missing some meta tags, and lang attribute was missing. This commit fixes these small mistakes. Add first recepie primavera.html.

--- a/recepies/primavera.html
+++ b/recepies/primavera.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin recepies</title>
+    <title>Recepies - primavera</title>
 </head>
 <body>
-    <h1>Odin recepies</h1>
-    <a href="recepies/primavera.html">Primavera</a>
+    <h1>Primavera</h1>
 </body>
 </html>
