--- a/recepies/primavera.html
+++ b/recepies/primavera.html
@@ -7,6 +7,20 @@
 </head>
 <body>
     <h1>Primavera</h1>
+    <img src="">
+
+    <h2>Description</h2>
+    <p></p>
+
+    <h2>Ingredients</h2>
+    <ul>
+
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        
+    </ol>
+
     <a href="../index.html">Back to the main page</a>
 </body>
 </html>
