Add intructions to primavera.html
Add necessery ingredients and steps to cook the dish.

--- a/recepies/primavera.html
+++ b/recepies/primavera.html
@@ -7,20 +7,39 @@
 </head>
 <body>
     <h1>Primavera</h1>
-    <img src="">
+    <img src="../img/makaron-primavera.jpg">
 
     <h2>Description</h2>
-    <p></p>
+    <p>A relatively quick and simple pasta dish without any meat. Preparation time is about 30 minutes.</p>
 
     <h2>Ingredients</h2>
     <ul>
-
+        <li>1 carrot</li>
+        <li>1 courgette</li>
+        <li>1 onion</li>
+        <li>3 garlic cloves</li>
+        <li>2 spoons of olive oil</li>
+        <li>A handful of cherry tomatoes</li>
+        <li>1 teaspool of oregano</li>
+        <li>Chopped basil</li>
+        <li>About 30 grams of grated parmesan cheese</li>
+        <li>100-120 grams of your favourite pasta</li>
+        <li>Chives</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        
+        <li>Cook the pasta using the instructions on the package. In the meanwhile let's prepare the rest of the dish.</li>
+        <li>Peel the carrot and then keep "peeling" using the same tool you used to peel the carrot. You should achieve long stripes.</li>
+        <li>Do the same with the courgette.</li>
+        <li>On a pan heat up the oil. Add finely chopped onion and let it fry for a moment. Add the carrot and keep frying for 2-3 minutes. Add grated garlic at the end.</li>
+        <li>Cut all tomatoes in half and add to the pan. Also add some salt, pepper and oregano. Cook for about 3 minutes.</li>
+        <li>Add the courgette and cook until it gets soft (or for 3 minutes).</li>
+        <li>Add strained pasta, mix all the ingredients on the pan and heat everything up for a moment.</li>
+        <li>At the very end add chives, cheese and some more olive oil if you wish.</li>
     </ol>
 
     <a href="../index.html">Back to the main page</a>
+    <!--I shamelessly took the recepie and image from  https://www.kwestiasmaku.com/przepis/makaron-primavera-z-warzywami -->
+    <!-- It's in polish, but I really like this dish, enjoy -->
 </body>
 </html>
