Add a link to a new recepies
Also put all the links into an unordered list.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin recepies</h1>
-    <a href="recepies/primavera.html">Primavera</a>
+    <ol>
+        <li><a href="recepies/primavera.html">Primavera</a></li>
+        <li><a href="recepies/broad-bean-salad.html">Broad bean salad</a></li>
+    </ol>
 </body>
 </html>
