Add intructions for broad bean salad
Add necessery ingredients and steps.

--- a/recepies/broad-bean-salad.html
+++ b/recepies/broad-bean-salad.html
@@ -10,15 +10,30 @@
     <img src="">
 
     <h2>Description</h2>
-    <p></p>
+    <p>A decent summer salat with broad bean as the main ingredient. Good with meat and/or grill.</p>
 
     <h2>Ingredients</h2>
     <ul>
-
+        <li>500 grams of broad beans</li>
+        <li>About 6 medium-sized potatoes</li>
+        <li>4 eggs</li>
+        <li>250 grams of bacon</li>
+    </ul>
+    <h2>Sauce ingredients</h2>
+    <ul>
+        <li>300-400 grams of natual yoghurt</li>
+        <li>Mayo</li>
+        <li>2 spoons of spicy mustard</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        
+        <li>Cook the broad bean in about 1 liter of water. Dissolve some salt and suger in hot water before adding the beans. The beans should be cooked under cover for about 8 minutes depending on how young the beans are.</li>
+        <li>Cook the potatoes in salted water without peeling them. Once they're soft strain them and peel. Cut them into small pieces and grill. You can use a grilling pan of normal frying pan if you don't have one. You can also skip grilling them if you're in a hurry.</li>
+        <li>Cook the eggs in salted water until they're hard-boiled.</li>
+        <li>Cut the bacon into small pieces. Fry it or cook it inside an oven. </li>
+        <li>Peel all broad been and put them on a serving platter as the base of the salad. On top of the beans add a layer of grilled potatoes. Cut the eggs into small pieces and add them on top as well. Finally cover the eggs in bacon.</li>
+        <li>Prepare the sauce. In a bowl mix all ingredients until they're one substance.</li>
+        <li>Cover the salad in sauce. Chop the chives and sprinkle it on top of the sauce. The salad is finished</li>
     </ol>
 
     <a href="../index.html">Back to the main page</a>
