Add alt attribute to primavera image

--- a/recepies/primavera.html
+++ b/recepies/primavera.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Primavera</h1>
-    <img src="../img/makaron-primavera.jpg">
+    <img src="../img/makaron-primavera.jpg" alt="Primavera pasta dish">
 
     <h2>Description</h2>
     <p>A relatively quick and simple pasta dish without any meat. Preparation time is about 30 minutes.</p>
