Add link to chicken salad

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ol>
         <li><a href="recepies/primavera.html">Primavera</a></li>
         <li><a href="recepies/broad-bean-salad.html">Broad bean salad</a></li>
+        <li><a href="recepies/chicken-noodle-salat.html">Chicken noodle salat</a></li>
     </ol>
 </body>
 </html>
