Add alt to image in broad-bean-salad.html

--- a/recepies/broad-bean-salad.html
+++ b/recepies/broad-bean-salad.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Broad bean salad</h1>
-    <img src="">
+    <img src="" alt="Broad bean salad">
 
     <h2>Description</h2>
     <p>A decent summer salat with broad bean as the main ingredient. Good with meat and/or grill.</p>
